# ROS_quadrotor_simulator

./: README.md  README.md~
action_controller/: CMakeLists.txt  README.txt  mainpage.dox  package.xml
action_controller/action/: MultiDofFollowJointTrajectory.action  MultiDofFollowJointTrajectory.action~
action_controller/msg/: MultiDofFollowJointTrajectoryAction.msg  MultiDofFollowJointTrajectoryActionFeedback.msg  MultiDofFollowJointTrajectoryActionGoal.msg  MultiDofFollowJointTrajectoryActionResult.msg  MultiDofFollowJointTrajectoryFeedback.msg  MultiDofFollowJointTrajectoryGoal.msg  MultiDofFollowJointTrajectoryResult.msg
action_controller/msg_gen/cpp/include/action_controller/: MultiDofFollowJointTrajectoryAction.h  MultiDofFollowJointTrajectoryActionFeedback.h  MultiDofFollowJointTrajectoryActionGoal.h  MultiDofFollowJointTrajectoryActionResult.h  MultiDofFollowJointTrajectoryFeedback.h  MultiDofFollowJointTrajectoryGoal.h  MultiDofFollowJointTrajectoryResult.h
action_controller/src/: actionController.cpp  actionController.cpp~
moveit_simple_controller_manager/: CMakeLists.txt  README.txt  package.xml
moveit_simple_controller_manager/src/: moveit_simple_controller_manager.cpp
quad_2dnav/: CMakeLists.txt  package.xml
quad_2dnav/launch/: amcl_quad.launch  amcl_quad.launch~  quad_2dnav.launch  quad_rviz.launch~  quad_slam_laser_map.launch  quad_slam_laser_map.launch~  quad_test.launch  quad_test.launch~
quad_2dnav/maps/: WG_map2.yaml  WG_map2.yaml~  costmap_common_params.yaml~
quad_2dnav/resource/: quad.rviz  quad_2dnav.rviz  quad_kinect.rviz
quad_3dnav/: .setup_assistant  CMakeLists.txt  package.xml
quad_3dnav/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  ompl_planning.yaml~  quad.srdf  quad.srdf~  sensors_kinect.yaml  sensors_rgbd.yaml~
quad_3dnav/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quad_3dnav.launch  quad_3dnav.launch.launch~  quad_3dnav.launch~  quad_moveit_controller_manager.launch.xml  quad_moveit_sensor_manager.launch.xml  quad_slam_rgbd_map.launch  quad_slam_rgbd_map.launch~  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  trajectory_execution.launch.xml~  warehouse.launch
quad_3dnav/resource/: moveit.rviz  quad_3dnav.rviz  quad_rgbd_map.rviz
quad_control/: CMakeLists.txt  CMakeLists.txt~  custom_rosconsole.conf  package.xml  package.xml~
quad_control/resource/: attitude_controller.yaml  attitude_controller.yaml~  kit_c.yaml~  kitchen_short_waypoints.txt  kitchen_short_waypoints.txt~  kitchen_waypoints.txt  kitchen_waypoints.txt~  position_controller.yaml  position_controller.yaml~  waypoint_test.txt  waypoint_test.txt~  wg_short_waypoints.txt  wg_short_waypoints.txt~  wg_waypoints.txt  wg_waypoints.txt~
quad_description/: CMakeLists.txt  package.xml
quad_description/launch/: quad_rviz.launch
quad_description/maps/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  local_costmap_params.yaml  wg_map.yaml
quad_description/resource/: quad_laser.rviz
quad_description/urdf/: component_snippets.xacro  component_snippets.xacro~  kit_c.urdf  kit_c.xacro  kit_c.xacro~  kit_c_base.xacro~  kit_c_generic_odometry_sensor.gazebo  kit_c_generic_odometry_sensor.gazebo~  kit_c_kinect.xacro  kit_c_kinect.xacro~  multirotor_base.xacro  multirotor_base.xacro~
quad_gazebo/: CMakeLists.txt  package.xml  package.xml~
quad_gazebo/launch/: delete_quad_joystick_gps_kinect_kitchen.launch  delete_quad_joystick_gps_kinect_kitchen.launch~  quad_empty_world.launch~  quad_joystick_empty_world.launch~  quad_joystick_gps_empty_world.launch  quad_joystick_gps_empty_world.launch~  quad_rviz.launch~  (+16 more)
quad_joystick_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
quad_joystick_interface/include/quad_joystick_interface/: joy.h  joy.h~
quad_joystick_interface/src/: joy.cpp  joy.cpp~
(+51 files in other folders)
